# rkvoice-stream

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
baseline/: P0_2_FIX_LOG.md  POC_KV_TRIM_RESULT.md  RK3588_ACCEPTANCE.md  RK3588_TRUE_STREAMING_RESULTS.md  SESSION_NOTES_20260510.md  STREAMING_FIX_AB_RESULTS.md  STREAMING_FIX_CD_RESULTS.md  STREAMING_PORT_RESULTS.md  baseline_rk3576_20260510.jsonl  baseline_rk3576_qwen3_20260510.jsonl  baseline_rk3576_qwen3_v2_20260510.jsonl  baseline_rk3576_qwen3_v3_20260510.jsonl
configs/: rk1828-gemma4.yaml  rk1828-qwen3-tts.yaml  rk3576-asr-only.yaml  rk3576-full.yaml  rk3576-moss-hybrid-rknn-stream.yaml  rk3576-moss-ort-stream.yaml  rk3576-moss-rknn-stream.yaml  rk3576-paraformer-matcha.yaml  rk3576-piper-multilang.yaml  rk3576-qwen3-rknn-stream.yaml  rk3576-tts-only.yaml  rk3588-full.yaml  rk3588-kokoro-rknn.yaml  rk3588-paraformer-matcha.yaml
docker/: Dockerfile  deploy.sh  docker-compose.kokoro-rknn.yml  docker-compose.paraformer-hybrid.yml  docker-compose.radxa.yml  docker-compose.yml  fix-docker-iptables.sh  setup-and-deploy.sh
docs/: kokoro-rknn-analysis.md  matcha-zh-en-tts.md  moss-rknn-rk3576.md  piper-vits-deployment.md  rk1828-gemma4.md  rk1828-package-integration.md  rk1828-qwen3-tts.md  rk1828-upstream-modelsetup-ackfail.md
docs/evidence/moss/: rk3576-moss-canonical-profile.json  rk3576-moss-cattn-s320-all-runtime-probe.json  rk3576-moss-cattn-s320-parity.json  rk3576-moss-cattn-s320-runtime-probe.json  rk3576-moss-codec-f1-crop-i82-int64input-runtime-probe-auto.json  rk3576-moss-codec-f1-crop-i99-int64offset-runtime-probe-auto.json  rk3576-moss-codec-f1-int64input-crops-83-149-runtime-probe-auto.json  rk3576-moss-codec-f1-int64input-crops-runtime-probe-auto.json  rk3576-moss-codec-f1-xorfix-runtime-probe-all.json  rk3576-moss-codec-f1-xorfix-runtime-probe-none.json  rk3576-moss-codec-official-crop-i99-simplify-int64offset-runtime-probe-auto.json  rk3576-moss-hybrid-prefill-ln2-mlp-cattn.json  rk3576-moss-ln1-cattn-s320-all-runtime-probe.json  rk3576-moss-ort-deployment-dry-run.json  wsl2-moss-rkllm-custom-code.json  (+30 more)
experiments/moss/: README.md  conftest.py
models/common/: convert_rknn_fixed.py  quantize_w4a16.py  quantize_w8a16.py  replace_sin_polynomial.py
models/rk1828/export/: README.md  pyproject.toml
models/tts/: convert_vocoder_rknn.py  rk3576_tts_dump.py  test_v2v.py  verify_code2wav_stateful_parity.py
rk1828/: README.md
rk1828/gemma4-patches/: README.md
rk1828/gemma4-patches/full-files/: CMakeLists.txt  main.cc
rkvoice_stream/: __init__.py
rkvoice_stream/app/: capability.py  dialogue.py  resource_planner.py  server.py
rkvoice_stream/backends/: __init__.py
rkvoice_stream/engine/: __init__.py  asr.py  audio_llm.py  tts.py
rkvoice_stream/platform/: __init__.py  base.py  rk1828.py  rk3576.py  rk3588.py
rkvoice_stream/runtime/: rkllm_wrapper.py  rknn3_worker.py
rkvoice_stream/vad/: silero.py
tests/: __init__.py  conftest.py  metrics.py  test_asr.py  test_build_moss_codec_front_islands.py  test_build_moss_codec_middle_bridges.py  test_build_moss_codec_suffix_islands.py  test_capability_device_id.py  test_convert_moss_onnx_to_rkllm_state.py  test_convert_moss_rknn_workspace.py  test_dialogue_streaming.py  test_extract_moss_rknn_island_workspace.py  test_latency.py  test_moss_backend_stage_evidence.py  test_moss_backend_stream_profiler.py  test_moss_canonical_deployment_evidence.py  test_moss_cattn_hybrid_prefill_evidence.py  test_moss_cattn_rknn_evidence.py  test_moss_deployment_path_evidence.py  test_moss_disk_audit.py  test_moss_hybrid_sampler_compare.py  test_moss_ln1_cattn_route_evidence.py  test_moss_monolithic_rknn_probe_evidence.py  test_moss_ort_artifacts.py  test_moss_ort_backend.py  test_moss_ort_config_verifier.py  test_moss_ort_deployment_dry_run_evidence.py  test_moss_ort_roundtrip_verifier.py  test_moss_production_entrypoint_evidence.py  test_moss_production_entrypoint_verifier.py  test_moss_production_evidence.py  test_moss_production_profile_verifier.py  test_moss_production_server_disk_gate_evidence.py  test_moss_production_server_runner.py  test_moss_release_audit.py  test_moss_release_audit_artifact_gate_evidence.py  test_moss_rkllm_reuse_assessment.py  test_moss_rkllm_runtime_evidence.py  test_moss_rkllm_weight_map.py  test_moss_rknn_artifacts.py  (+35 more)
tests/fixtures/: mock_rk1828_gemma4_worker.py  mock_rk1828_tts_worker.py
tools/: bench_paraformer.py  bench_paraformer_pipeline.py  bench_qwen3.py
(+268 files in other folders)
